FE article: fix spacing issues. Refs #432

--- a/resources/assets/sass/article.scss
+++ b/resources/assets/sass/article.scss
@@ -233,6 +233,10 @@ body {
 }
 
 .Article__meta-wrap {
+  @include breakpoint(768px 1023px) {
+    display: grid;
+    grid-template-columns: repeat(13, 1fr);
+  }
   @include breakpoint($medium-up) {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -254,6 +258,10 @@ body {
   color: $a-gris-clair;
 }
 .Article__byline {
+  @include breakpoint(768px 1023px) {
+    grid-column: 1 / 5;
+    text-align: left;
+  }
   @include breakpoint($medium-up) {
     grid-column: 4 / 7;
     grid-row: 1;
@@ -265,6 +273,11 @@ body {
 }
 .Article__cover-dates {
   margin-bottom: 60px;
+  @include breakpoint(768px 1023px) {
+    grid-column: 10 / 14;
+    margin-bottom: 0;
+    text-align: left;
+  }
   @include breakpoint($medium-up) {
     grid-column: 1 / 3;
     grid-row: 1;
