--- a/resources/assets/sass/blocks/HighlightedText.scss
+++ b/resources/assets/sass/blocks/HighlightedText.scss
@@ -11,7 +11,7 @@
     & .HighlightedText__inner::before {
       background-color: $a-or-fond-noir;
     }
-    @include dark-margin-top(80px);
+    @include dark-margin-top(50px);
     @include dark-margin-bottom(80px);
     @include breakpoint($a-xxlarge-up) {
       @include dark-margin-top(100px);
@@ -21,8 +21,8 @@
 }
 .HighlightedText__inner {
   grid-column: main;
-  @include breakpoint($medium-up) {
-    grid-column: 3 / 10;
+  @include breakpoint(768px) {
+    grid-column: 2 / 12;
   }
   @include breakpoint($a-xxlarge-up) {
     grid-column: 4 / 11;
